@@ -64,6 +64,7 @@ class TypeCommand : public Type
       _HT_PHASOR,
       _HT_SINE,
       _LINEARREG,
+      _LOAD,
       _MA,
       _MACD,
       _MAMA,
@@ -82,6 +83,7 @@ class TypeCommand : public Type
       _RSI,
       _RUN,
       _SAR,
+      _SAVE,
       _SET,
       _SHIFT,
       _STDDEV,
